--- a/_posts/2015-10-24-tejun.markdown
+++ b/_posts/2015-10-24-tejun.markdown
@@ -25,13 +25,15 @@ csvファイルをelastissearchに読み込ませるためのツールとしてE
 * yml定義ファイルを作成する。
 * embulkコマンドを用いて不明パラメータの補完を行う。
 
-'embulk guess before.yml -o after.yml'
+    embulk guess before.yml -o after.yml
+
 * elasticsearchを起動する。
 
-'./elasticsearch'
+    ./elasticsearch
+
 * embulkによってymlファイルの処理を実行する。
 
-'embulk run after.yml'
+    embulk run after.yml
 
 #### Kibanaでグラフ化する。
 
